# receipt-analyzer

./: .gitignore  AGENTS.md  CATEGORIES_FEATURE_SUMMARY.md  CLAUDE.md  DEPLOY.md  DUPLICATE_DETECTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  Receipt Analyzer project.md  opencode.jsonc  package-lock.json  package.json
.opencode/skills/codebase-structure/: SKILL.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_classifier_manually.py  test_scrape.py
backend/app/: config.py
backend/app/api/routes/: categories.py  receipt.py
backend/app/models/: receipt.py
backend/app/services/: classifier.py  parser.py  scraper.py  sheets.py
backend/data/: categories.json
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_parser.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CategoriesManager.jsx  CategoryRenameView.jsx  ErrorDisplay.jsx  ItemCategoryManager.jsx  LoadingSpinner.jsx  ProcessingProgress.jsx  ReceiptForm.jsx
frontend/src/hooks/: useReceiptStream.js
frontend/src/i18n/: config.js  en.json  he.json
frontend/src/services/: api.js  categoriesApi.js
frontend/src/styles/: ErrorDisplay.css  LoadingSpinner.css  ProcessingProgress.css  ReceiptForm.css  categories.css  global.css  tabs.css
frontend/src/test/: setup.js
